--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <body>
         <h1>Uma pequena lanchonete.<strong>Happy Lanches.</strong></h1>
 
+        <img id="lanchonete" src="lanchonete ana.jpg">
+
         <p>A lanchonete <strong>Happy Lanches</strong> é uma pequena lanchonete localizada na cidade de Guarapuava. É um lindo lugar, bem decorado, com tema antigo e rústico
         que oferece diversos lanches, cafés e também almoço.</p>
         
