--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>A lanchonete <strong>Happy Lanches</strong> é uma pequena lanchonete localizada na cidade de Guarapuava. É um lindo lugar, bem decorado, com tema antigo e rústico
         que oferece diversos lanches, cafés e também almoço.</p>
         
-        <p>A lanchonete possui um tamanho médio com pequenas mesas e uma cozinha onde os lanches são preparados com todo carinho, claro que pela minha mãe 
+        <p>A lanchonete possui um tamanho médio/grande com pequenas mesas e uma cozinha onde os lanches são preparados com todo carinho, claro que pela minha mãe 
         (Simone), que tem "mãos mágicas" para fazer massas, sobremesas, bolos, pães e diversos lanches, tanto salgados quanto doces.</p>
         
         <p>É um ótimo lugar para tomar um café da manhã ou da tarde, enfim é muito aconchegante, com uma ótima recepção, com certeza é um lugar satisfatório.
