--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
         <link rel="stylesheet" href="style.css">
+        <style>
+            
+        </style>
     </head>
     <body>
         <h1>Uma pequena lanchonete.<strong>Happy Lanches.</strong></h1>
