--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset='utf-8'>
         <html lang=" pt-br"
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Page Title</title>
+        <title> Happy Lanches</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
+        
         <link rel="stylesheet" href="style.css">
         <style>
-            
+
         </style>
     </head>
     <body>
